# Sigid

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_ES.md  README_RU.md  README_ZH.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: checksum.rs  consts.rs  decoder.rs  encoder.rs  generator.rs  id.rs  lib.rs  rng.rs  serde.rs  uuid_conv.rs
core/tests/: tests.rs
enterprise/: Cargo.toml
enterprise/src/: convert.rs  inspect.rs  lib.rs  worker.rs
flexible/: Cargo.toml
flexible/src/: alphabet.rs  checksum.rs  generator.rs  lib.rs  prefix.rs
