[workspace]
members = ["core", "flexible", "enterprise"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Dmitry Marison <dmitrymarison@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dmitrymarison/sigid"
homepage = "https://github.com/dmitrymarison/sigid"
documentation = "https://docs.rs/sigid-core"
readme = "README.md"
description = "Sigid - Configurable ID generator with three layers: Simple → Flexible → Enterprise"
keywords = ["id", "generator", "uuid", "ulid"]
categories = ["algorithms", "data-structures", "encoding"]
exclude = [
    ".gitignore",
    ".github/",
    "benches/",
    "examples/",
]

[workspace.dependencies]
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "v7"] }

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1