[package]
name = "sigid-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Zero-dependency, no_std core for SigID - 26-char Crockford Base32 identifiers"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
uuid = ["dep:uuid"]
wasm = []

[dependencies]
serde = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }