[package]
name = "sigid-enterprise"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Enterprise-grade SigID generator with worker ID, coordination, and UUID compatibility"

[features]
default = ["std"]
std = ["sigid-core/std", "sigid-flexible/std"]
uuid = ["dep:uuid", "sigid-core/uuid"]
ulid = ["dep:ulid"]
serde = ["sigid-flexible/serde", "sigid-core/serde"]
full = ["uuid", "serde"]

[dependencies]
sigid-core = { path = "../core" }
sigid-flexible = { path = "../flexible" }
uuid = { workspace = true, optional = true }
ulid = { version = "1.0", optional = true }