[package]
name = "sigid-enterprise"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sigid-enterprise"
readme.workspace = true
description = "Enterprise-grade Sigid generator with worker ID, coordination, and UUID compatibility"
categories.workspace = true
keywords.workspace = true
exclude = ["tests/"]

[features]
default = ["std"]
std = ["sigid-core/std", "sigid-flexible/std"]
uuid = ["dep:uuid", "sigid-core/uuid"]
ulid = ["dep:ulid"]
serde = ["sigid-flexible/serde", "sigid-core/serde"]
secure = ["sigid-core/secure"]
full = ["uuid", "serde", "secure"]

[dependencies]
sigid-core = { path = "../core" }
sigid-flexible = { path = "../flexible" }
uuid = { workspace = true, optional = true }
ulid = { version = "1.0", optional = true }