[package]
name = "sigid-flexible"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Configurable SigID generator with custom length, alphabet, and prefixes"

[features]
default = ["std"]
std = ["sigid-core/std"]
serde = ["dep:serde", "sigid-core/serde"]
wasm = ["sigid-core/wasm"]

[dependencies]
sigid-core = { path = "../core" }
serde = { workspace = true, optional = true }