[package]
name = "sigid-flexible"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sigid-flexible"
readme.workspace = true
description = "Configurable SigID generator with custom length, alphabet, and prefixes"
categories.workspace = true
keywords.workspace = true
exclude = ["tests/"]

[features]
default = ["std"]
std = ["sigid-core/std"]
serde = ["dep:serde", "sigid-core/serde"]
wasm = ["sigid-core/wasm"]

[dependencies]
sigid-core = { path = "../core", version = "1.1.0" }
serde = { workspace = true, optional = true }